fix z-index of sidbar mobile

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -21,7 +21,7 @@
 .sidebar-mobile {
     position: fixed;
     right: 10px;
-    z-index: 1;
+    z-index: 300;
 }
 
 .sidebar-mobile .dropdown-content {
